# carrotsh

./: .gitignore  README.md  SECURITY.md  auto_blocklist.json  blocklist_install.py  carrotsh.py  changelog  config.json  config.yaml  index.html  index.js  login.py  package-lock.json  package.json  pm2.config.js  pyproject.toml  requirements.txt  setpass.py  user_blocklist.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: vulnerability-report.md
.github/workflows/: codacy.yml  codeql-analysis.yml  devskim.yml  ossar.yml  pylint.yml
blocklists/: auto_blocklist.json
commands/: csh_add_blocklist_address.py  csh_clear_auto_blocklist.py  csh_clear_user_blocklist.py  csh_config_dump.py  csh_install_blocklist.py  csh_install_deps.py  csh_setpass.py  csh_setup_2fa.py  csh_start.py  csh_status.py  csh_stop.py  csh_version.py
csh/: __main__.py
login/: login.py  password
main/: __main__.py
public/: main.css  package-lock.json  package.json  term.js
scripts/: blocklist_install.py  setpass.py
server/: index.html  server.js
